
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_Framework_Component" #DDDDDD
{

class "DMA::IComponent"
{
}

}

package "DMA_Log_API" #DDDDDD
{

class "CConsoleView"
{
}

class "CLogComponent"
{
}

}

package "Qt" #DDDDDD
{

class "QPlainTextEdit"
{
}

}

'====================Inheritance section====================
QPlainTextEdit <|-- CConsoleView : extends
DMA::IComponent <|-- CLogComponent : implements

@enduml